started using moxy MVP. Divided the project into modules

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">StarWars</string>
+    <string name="HeroSearchHinit">Enter your query here</string>
+    <string name="heroesNoItems">Star Wars hero list is empty</string>
 </resources>
